@@ -14,6 +14,10 @@
           <string>Bits</string>
           <int>2</int>
         </entry>
+        <entry>
+          <string>pinNumber</string>
+          <string>i1,i2</string>
+        </entry>
       </elementAttributes>
       <pos x="280" y="220"/>
     </visualElement>
@@ -27,6 +31,10 @@
         <entry>
           <string>Bits</string>
           <int>2</int>
+        </entry>
+        <entry>
+          <string>pinNumber</string>
+          <string>o1,o2</string>
         </entry>
       </elementAttributes>
       <pos x="320" y="220"/>
